[gd_scene load_steps=2 format=3 uid="uid://hsn0vxf4utf4"]

[ext_resource type="Script" uid="uid://ds0txknyvbcjl" path="res://ui/hub/options_window.gd" id="1"]

[node name="OptionsWindow" type="AcceptDialog"]
title = "Opciones"
position = Vector2i(0, 36)
size = Vector2i(400, 200)
visible = true
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.942
anchor_bottom = 1.457
offset_left = 8.0
offset_top = 8.0
offset_right = 392.0
offset_bottom = 151.0
grow_horizontal = 2
grow_vertical = 2

[node name="hbox_volume" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LabelVolume" type="Label" parent="VBox/hbox_volume"]
layout_mode = 2
text = "Volumen:"

[node name="SliderVolume" type="HSlider" parent="VBox/hbox_volume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 5.0
step = 0.3

[node name="hbox_font_size" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LabelFontSize" type="Label" parent="VBox/hbox_font_size"]
layout_mode = 2
text = "Tamaño diálogo:"

[node name="SliderFontSize" type="HSlider" parent="VBox/hbox_font_size"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 10.0
max_value = 16.0
value = 12.0

[node name="hbox_chromatic_mode" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="LabelChromaticMode" type="Label" parent="VBox/hbox_chromatic_mode"]
layout_mode = 2
text = "Modo de colores:"

[node name="OptionButton" type="OptionButton" parent="VBox/hbox_chromatic_mode"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 4
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Deuteranopia (Dificultad para ver verdes)"
popup/item_1/id = 1
popup/item_2/text = "Protanopia (Dificultad para ver rojos)"
popup/item_2/id = 2
popup/item_3/text = "Tritanopia (Dificultad para ver azules)"
popup/item_3/id = 3
